--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.14",
+    "hugo-bin": "^0.149.2",
     "tailwindcss": "^4.1.14"
   },
   "scripts": {
     "tailwind:build": "tailwindcss -i assets/css/input.css -o assets/css/output.css --minify",
-    "build": "npm run tailwind:build && hugo",
+    "build": "npm run tailwind:build && hugo-bin"
     "dev": "hugo server --disableFastRender"
   }
 }
