--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "tailwind:build": "tailwindcss -i assets/css/input.css -o assets/css/output.css --minify",
-    "build": "npm run tailwind:build && hugo-bin"
+    "build": "npm run tailwind:build && hugo-bin",
     "dev": "hugo server --disableFastRender"
   }
 }
